--- a/application/admin/view/dormitorysystem/index/index.html
+++ b/application/admin/view/dormitorysystem/index/index.html
@@ -73,11 +73,11 @@
                                 <h1>{$vo.LH}号楼</h1>
                                 </div>
                                 <div class="icon">
-                                <i class="fa fa-building"></i>
+                                    <i class="fa fa-building"></i>
                                 </div>
-                                <!-- <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" class="small-box-footer btn-dialog">
+                                <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" title="宿舍详情" class="small-box-footer btn-dialog">
                                 查看详情<i class="fa fa-arrow-circle-right"></i>
-                                </a> -->
+                                </a>
                             </div>
                         </div>
                         {/foreach}
@@ -97,9 +97,9 @@
                                 <div class="icon">
                                 <i class="fa fa-building"></i>
                                 </div>
-                                <!-- <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" class="small-box-footer btn-dialog">
+                                <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" title="宿舍详情" class="small-box-footer btn-dialog">
                                 查看详情<i class="fa fa-arrow-circle-right"></i>
-                                </a> -->
+                                </a>
                             </div>
                         </div>
                         {/foreach}
@@ -119,9 +119,9 @@
                                 <div class="icon">
                                 <i class="fa fa-building"></i>
                                 </div>
-                                <!-- <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" class="small-box-footer btn-dialog">
+                                <a href="./dormitorysystem/index/buildingdetail?LH={$vo.LH}" title="宿舍详情" class="small-box-footer btn-dialog">
                                 查看详情<i class="fa fa-arrow-circle-right"></i>
-                                </a> -->
+                                </a>
                             </div>
                         </div>
                         {/foreach}
