--- a/application/admin/view/dormitorysystem/dormitorylist/confirmdelete.html
+++ b/application/admin/view/dormitorysystem/dormitorylist/confirmdelete.html
@@ -4,91 +4,81 @@
     <p class="hidden" id="CH">{$param.CH}</p>
     <p class="hidden" id="XH">{$param.XH}</p>
 </div>
-<div class="box-body">
-    <div class="callout callout-warning">
-        <h4>您正在操作的是</h4>
-        <font size = "5px">{$param.LH}#{$param.SSH}-{$param.CH}</font>
-        学号为：<font size = "5px">{$param.XH}</font>
-        姓名：<font size = "5px">{$param.XM}</font>
+<div class="box box-info">
+    <div class="box-header with-border">
+        <div class="callout callout-warning">
+            <h4>您正在操作的是</h4>
+            <font size = "5px">{$param.LH}#{$param.SSH}-{$param.CH}</font>
+            学号为：<font size = "5px">{$param.XH}</font>
+            姓名：<font size = "5px">{$param.XM}</font>
+        </div>
     </div>
-</div>
 
+    <div class="box-body">
+        <form class="form-horizontal" role="form">
+                <div class="form-group" id="selectreason">
+                    <label class="col-xs-2 control-label">请选择原因</label>
+                    <div class="col-xs-10">
+                            <input type="radio" name="reason"  value="XX" checked="">休学
+                            <input type="radio" name="reason" value="TX">退学
+                            <input type="radio" name="reason" value="XW">校外
+                            <input type="radio" name="reason" value="TS">调宿
+                            <input type="radio" name="reason" value="QT">其它
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="selectstarttime" class="col-xs-2 control-label">开始日期</label>
+                    <div class="col-xs-8">
+                        <input type="hidden" class="operate" name="selectstarttime-operate" data-name="selecttime" value="RANGE" readonly="">
+                        <input type="text" class="datetimerange form-control" autocomplete="off" name="selectstarttime" value="" id="selectstarttime" data-index="30">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="selectendtime" class="col-xs-2 control-label">结束日期</label>
+                    <div class="col-xs-8">
+                        <input type="hidden" class="operate" name="selectendtime-operate" data-name="selectendtime" value="RANGE" readonly="">
+                        <input type="text" class="datetimerange form-control" name="selectendtime" value="" autocomplete="off" id="selectendtime" data-index="30">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="remark" class="col-xs-2 control-label">备注</label>
+                    <div class="col-xs-8">
+                        <textarea id="remark" name="remark" class="form-control" rows="4"></textarea>
+                    </div>
+                </div>
 
-<div class="row">
-    <div class="form-group col-xs-12" id="selectreason">
-            <label class="col-sm-2 col-xs-2">请选择原因</label>
-            <div class="col-sm-10 col-xs-10">
-                    <input type="radio" name="reason"  value="XX" checked="">休学
-                    <input type="radio" name="reason" value="TX">退学
-                    <input type="radio" name="reason" value="XW">校外
-                    <input type="radio" name="reason" value="TS">调宿
-                    <input type="radio" name="reason" value="QT">其它
-            </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="form-group col-xs-12">
-        <label for="selectstarttime" class="col-xs-2">开始日期</label>
-
-        <input type="hidden" class="operate" name="selectstarttime-operate" data-name="selecttime" value="RANGE" readonly="">
-        <input type="text" class="datetimerange col-xs-4" name="selectstarttime" value="" id="selectstarttime" data-index="30">
- 
-    </div>
-</div>
-
-<div class="row">
-    <div class="form-group col-xs-12">
-        <label for="selectendtime" class="col-xs-2">结束日期</label>
-
-        <input type="hidden" class="operate" name="selectendtime-operate" data-name="selectendtime" value="RANGE" readonly="">
-        <input type="text" class="datetimerange col-xs-4" name="selectendtime" value="" id="selectendtime" data-index="30">
-
-    </div>
-</div>
-
-<div class="row">
-    <div class="form-group col-xs-12">
-        <label class="col-sm-2 col-xs-2">备注</label>
-        <textarea id="remark" class="col-xs-10" placeholder="请输入输入备注" rows="5" ></textarea>
-    </div>
-</div>
-
-<div class="col-xs-12">
-    <table class="table table-striped ">
-        <p class="lead">操作记录</p>
-        <thead>
-        <tr>
-            <th>操作</th>
-            <th>操作人</th>
-            <th>操作时间</th>
-        </tr>
-        </thead>
-        <tbody>
-        {empty name="$historyOperate"}
-            <tr>
-                <td colspan="3">暂无历史操作记录</td>
-            </tr>
-        {else /}
-            {foreach $historyOperate as $vo}
+        </form>
+        <div class="col-xs-12">
+            <table class="table table-striped ">
+                <p class="lead">操作记录</p>
+                <thead>
                 <tr>
-                    <td>{$vo.operation}</td>
-                    <td>{$vo.nickname}</td>
-                    <td>{$vo.operate_time}</td>
+                    <th>操作</th>
+                    <th>操作人</th>
+                    <th>操作时间</th>
                 </tr>
-            {/foreach}
-        {/empty}
-        </tbody>
-    </table>
-</div>
+                </thead>
+                <tbody>
+                {empty name="$historyOperate"}
+                    <tr>
+                        <td colspan="3">暂无历史操作记录</td>
+                    </tr>
+                {else /}
+                    {foreach $historyOperate as $vo}
+                        <tr>
+                            <td>{$vo.operation}</td>
+                            <td>{$vo.nickname}</td>
+                            <td>{$vo.operate_time}</td>
+                        </tr>
+                    {/foreach}
+                {/empty}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-<p></p>
-<div class="row">
-    <div class="col-xs-12">
-        <button type="button" class="btn btn-danger btn-md pull-left btn-confirmdelete" style="margin-left: 10px;"><i class="fa fa-times"></i>确认删除
-        </button>
-        <button type="button" class="btn btn-default btn-md pull-right btn-canceldelete" style="margin-right: 10px;">
-            <i class="fa fa-times-circle"></i>取消删除
-        </button>
+    <div class="box-footer">
+        <button type="button" class="btn btn-danger " id="confirmdelete"><i class="fa fa-times">确认移除</i></button>
+        <button type="button" class="btn btn-default pull-right cancel" style="margin-right: 50px;"> <i class="fa fa-times-circle">取消</i></button>
     </div>
 </div>
