--- a/application/admin/view/dormitorysystem/dormitorylist/dormitoryinfo.html
+++ b/application/admin/view/dormitorysystem/dormitorylist/dormitoryinfo.html
@@ -72,8 +72,8 @@
                 {eq name="$vo.stuinfo.XH" value="---"}
                 <td><a href="./dormitorysystem/dormitorylist/confirmdistribute?LH={$dormitoryInfoList.LH}&CH={$vo.CH}&SSH={$dormitoryInfoList.SSH}" class="btn btn-xs btn-success btn-distribute  btn-dialog" ><i class="fa fa-hand-rock-o"> 入住</i></a></td>
                 {else/} 
-                <td><a href="./dormitorysystem/dormitorylist/confirmdelete?LH={$dormitoryInfoList.LH}&CH={$vo.CH}&SSH={$dormitoryInfoList.SSH}&XH={$vo.stuinfo.XH}&XM={$vo.stuinfo.XM}" class="btn btn-xs btn-danger btn-delete  btn-dialog" title="确认退宿"><i class="fa fa-times"> 退宿</i></a>
-                <a href="./dormitorysystem/changebed/index?LH={$dormitoryInfoList.LH}&CH={$vo.CH}&SSH={$dormitoryInfoList.SSH}" class="btn btn-xs btn-primary btn-changebed btn-dialog" title="调换宿舍"><i class="fa fa-exchange"> 调宿</i></a></td>
+                <td><a href="./dormitorysystem/dormitorylist/confirmdelete?LH={$dormitoryInfoList.LH}&CH={$vo.CH}&SSH={$dormitoryInfoList.SSH}&XH={$vo.stuinfo.XH}&XM={$vo.stuinfo.XM}" class="btn btn-xs btn-danger btn-delete  btn-dialog" ><i class="fa fa-times"> 退宿</i></a>
+                <a href="./dormitorysystem/dormitorylist/confirmchange?LH={$dormitoryInfoList.LH}&CH={$vo.CH}&SSH={$dormitoryInfoList.SSH}&XH={$vo.stuinfo.XH}" class="btn btn-xs btn-primary btn-changebed btn-dialog" ><i class="fa fa-exchange"> 调宿</i></a></td>
                 <!-- <button type="button" class="btn btn-danger btn-delete" value="{$vo.CH}-{$vo.stuinfo.XH}">移除</button></td> -->
                 {/eq}
  
