--- a/application/admin/view/dormitorysystem/buildingimage/buildingdetail/chd_building_ws_1.html
+++ b/application/admin/view/dormitorysystem/buildingimage/buildingdetail/chd_building_ws_1.html
@@ -44,7 +44,15 @@
 <div class="row">
 	<p class="hidden" id="LH">{$LH}</p>
 </div>
+<div class="callout callout-info">
+	<h4>统计信息</h4>
 
+	<p>总学生用房：<span class=" badge bg-blue">{$allBedNums}</span>
+	空学生用房数：<span class=" badge bg-blue">{$allStuRooms}</span>
+	总公用房数：<span class=" badge bg-blue">{$allPublicRooms}</span>
+	总床位数：<span class=" badge bg-blue">{$allBedNums}</span>
+	总人数：<span class=" badge bg-blue">{$allStuNums}</span></p>
+</div>
 <div class="row">
     <table  class="dormitory" id="dormitory_id" border="2">
 		<tr class="block">
