报修上线前调整

--- a/application/admin/view/bx/repairsettlement/add.html
+++ b/application/admin/view/bx/repairsettlement/add.html
@@ -33,7 +33,7 @@
     <div class="form-group">
         <label for="c-mobile" class="control-label col-xs-12 col-sm-2">{:__('费用合计')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-mobile" data-rule="required;integer" class="form-control" name="row[money]" type="text" autocomplete="off">
+            <input id="c-mobile" data-rule="integer" class="form-control" name="row[money]" type="text" autocomplete="off">
         </div>
     </div>
     <div class="form-group">
