--- a/application/admin/view/bx/repairlist/index.html
+++ b/application/admin/view/bx/repairlist/index.html
@@ -8,17 +8,20 @@
                     <div id="toolbar" class="toolbar">                           
                         <a href="javascript:;" class="btn btn-primary btn-refresh" title="{:__('Refresh')}" ><i class="fa fa-refresh"></i> </a>
                         <a href="javascript:;" class="btn btn-success btn-add {:$auth->check('bx/repairlist/add')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('Add')}</a>
-                        <a href="javascript:;" class="btn btn-danger btn-del btn-disabled disabled {:$auth->check('bx/repairlist/del')?'':'hide'}" title="{:__('Delete')}" ><i class="fa fa-trash"></i> {:__('Delete')}</a>
+                        {eq name="status_params" value="waited"}
+                        <a href="javascript:;" class="btn btn-info btn-multi-accept " title="{:__('批量受理')}" ><i class="fa fa-hand"></i> {:__('批量受理')}</a>
+                        {/eq}
+                        <!-- <a href="javascript:;" class="btn btn-danger btn-del btn-disabled disabled {:$auth->check('bx/repairlist/del')?'':'hide'}" title="{:__('Delete')}" ><i class="fa fa-trash"></i> {:__('Delete')}</a> -->
                         <!-- <a href="javascript:;" class="btn btn-danger btn-import {:$auth->check('bx/repairlist/import')?'':'hide'}" title="{:__('Import')}" id="btn-import-file" data-url="ajax/upload" data-mimetype="csv,xls,xlsx" data-multiple="false"><i class="fa fa-upload"></i> {:__('Import')}</a> -->
 
 
-                        <div class="dropdown btn-group {:$auth->check('bx/repairlist/multi')?'':'hide'}">
+                        <!-- <div class="dropdown btn-group {:$auth->check('bx/repairlist/multi')?'':'hide'}">
                             <a class="btn btn-primary btn-more dropdown-toggle btn-disabled disabled" data-toggle="dropdown"><i class="fa fa-cog"></i> {:__('More')}</a>
                             <ul class="dropdown-menu text-left" role="menu">
                                 <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=normal"><i class="fa fa-eye"></i> {:__('Set to normal')}</a></li>
                                 <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=hidden"><i class="fa fa-eye-slash"></i> {:__('Set to hidden')}</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <!-- data-operate-edit="{:$auth->check('bx/repairlist/edit')}"  -->
                     <table id="table" class="table table-striped table-bordered table-hover" 
