--- a/application/index/view/filequery/index.html
+++ b/application/index/view/filequery/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>查询</title>
+    <title>长安大学遗留档案查询</title>
     
     <link rel="stylesheet" href="__CDN__/assets/css/filequery/example.css"/>
     <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
