--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <body id="page-top">
-        Hello，my yiban!
-    </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
+  <title>ICE Open Platform LandingPage</title>
+<link rel="shortcut icon" href="__CDN__/assets/img/index/favicon.png"><link href="__CDN__/assets/css/index/index.css" rel="stylesheet"></head>
+
+<body>
+  <div id="ice-container"></div>
+<script type="text/javascript" src="__CDN__/assets/js/index/index.js"></script></body>
+
 </html>
