--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
-  <title>ICE Open Platform LandingPage</title>
-<link rel="shortcut icon" href="__CDN__/assets/img/index/favicon.png"><link href="__CDN__/assets/css/index/index.css" rel="stylesheet"></head>
+  <title>长大易班 - 2019长安大学最酷团队</title>
+<link rel="shortcut icon" href="http://yibanteamindex.oss-cn-beijing.aliyuncs.com/images/favicon.ico"><link href="http://yibanteamindex.oss-cn-beijing.aliyuncs.com/static/css/index.css" rel="stylesheet"></head>
 
 <body>
   <div id="ice-container"></div>
-<script type="text/javascript" src="__CDN__/assets/js/index/index.js"></script></body>
+<script type="text/javascript" src="http://yibanteamindex.oss-cn-beijing.aliyuncs.com/static/js/index.js"></script></body>
 
 </html>
