--- a/application/admin/view/adviser/index/index.html
+++ b/application/admin/view/adviser/index/index.html
@@ -55,16 +55,40 @@
                     </div>
                     {empty name="$adviser.question"}
                     <div class="form-group">
-                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('开班会次数')}:</label>
+                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('参与班会次数')}:</label>
                         <div class="col-xs-12 col-sm-8">
                             <input id="c-BHCS" data-rule="required;integer" class="form-control" name="row[BHCS]" type="text" autocomplete="off">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('参加班级集体活动次数')}:</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input id="c-BHCS" data-rule="required;integer" class="form-control" name="row[HDCS]" type="text" autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('单独辅导学生人数')}:</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input id="c-BHCS" data-rule="required;integer" class="form-control" name="row[FDXS]" type="text" autocomplete="off">
+                        </div>
+                    </div>
                     {else/}
                     <div class="form-group">
-                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('开班会次数')}:</label>
+                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('参与班会次数')}:</label>
                         <div class="col-xs-12 col-sm-8">
                             <input id="c-BHCS" data-rule="required;integer" class="form-control" name="row[BHCS]" type="text" value="{$adviser.question.BHCS}" autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('参加班级集体活动次数')}:</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input id="c-BHCS" data-rule="required;integer" class="form-control" name="row[HDCS]" type="text" value="{$adviser.question.HDCS}" autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="c-BHCS" class="control-label col-xs-12 col-sm-2">{:__('单独辅导学生人数')}:</label>
+                        <div class="col-xs-12 col-sm-8">
+                            <input id="c-BHCS" data-rule="required;integer" class="form-control" name="row[FDXS]" type="text" value="{$adviser.question.FDXS}" autocomplete="off">
                         </div>
                     </div>
                     {/empty}
