运动会api修改以及报修后台修改

--- a/application/admin/view/bx/repairlist/detail.html
+++ b/application/admin/view/bx/repairlist/detail.html
@@ -106,8 +106,8 @@
             <div class="row">
                 <div class="col-xs-9">
                     <label>指派单位</label>
-                    <div class="form-inline" data-toggle="cxselect" data-selects="company,worker">
-                        <select class="company form-control" name="company" id="company" data-url="bx/repairlist/getcompany"></select>
+                    <div class="form-inline" data-toggle="cxselect" data-selects="company,worker"  data-required="true">
+                        <select class="company form-control" name="company" id="company"   data-url="bx/repairlist/getcompany"></select>
                         <select class="worker form-control" name="worker" id="worker" data-url="bx/repairlist/getworker"></select>
                     </div>
                 </div>
