--- a/application/admin/view/bx/repairlist/index.html
+++ b/application/admin/view/bx/repairlist/index.html
@@ -11,19 +11,18 @@
                         {eq name="status_params" value="waited"}
                         <a href="javascript:;" class="btn btn-info btn-multi-accept " title="{:__('批量受理')}" ><i class="fa fa-hand"></i> {:__('批量受理')}</a>
                         {/eq}
-                        <!-- <a href="javascript:;" class="btn btn-danger btn-del btn-disabled disabled {:$auth->check('bx/repairlist/del')?'':'hide'}" title="{:__('Delete')}" ><i class="fa fa-trash"></i> {:__('Delete')}</a> -->
-                        <!-- <a href="javascript:;" class="btn btn-danger btn-import {:$auth->check('bx/repairlist/import')?'':'hide'}" title="{:__('Import')}" id="btn-import-file" data-url="ajax/upload" data-mimetype="csv,xls,xlsx" data-multiple="false"><i class="fa fa-upload"></i> {:__('Import')}</a> -->
-
-
-                        <!-- <div class="dropdown btn-group {:$auth->check('bx/repairlist/multi')?'':'hide'}">
-                            <a class="btn btn-primary btn-more dropdown-toggle btn-disabled disabled" data-toggle="dropdown"><i class="fa fa-cog"></i> {:__('More')}</a>
-                            <ul class="dropdown-menu text-left" role="menu">
-                                <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=normal"><i class="fa fa-eye"></i> {:__('Set to normal')}</a></li>
-                                <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=hidden"><i class="fa fa-eye-slash"></i> {:__('Set to hidden')}</a></li>
-                            </ul>
-                        </div> -->
+                        {eq name="status_params" value="accepted"}
+                        <form id="cxselectform" action="" style="display:inline-block;">         
+                            <div class="form-inline" data-toggle="cxselect" data-selects="company,worker"  data-required="true">
+                                <select class="company form-control" name="company" id="company"   data-url="bx/repairlist/getcompany"></select>
+                                <select class="worker form-control" name="worker" id="worker" data-url="bx/repairlist/getworker"></select>
+                            </div>
+                        </form>
+                        <a href="javascript:;" class="btn btn-info btn-multi-dispatch " title="{:__('批量派工')}" ><i class="fa fa-hand"></i> {:__('批量派工')}</a>
+                        {/eq}
+                        
                     </div>
-                    <!-- data-operate-edit="{:$auth->check('bx/repairlist/edit')}"  -->
+                        
                     <table id="table" class="table table-striped table-bordered table-hover" 
                            data-operate-edit="0" 
                            data-operate-del="0" 
