--- a/application/admin/view/general/profile/index.html
+++ b/application/admin/view/general/profile/index.html
@@ -76,11 +76,13 @@
         </div>
 
     </div>
+    <input type="text" class="hidden" id="adminId" value="{$admin.id}">
     <div class="col-md-8">
         <div class="panel panel-default panel-intro panel-nav">
             <div class="panel-heading">
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="#one" data-toggle="tab"><i class="fa fa-list"></i> {:__('Admin log')}</a></li>
+                    <li class="bindWx"><a href="#two"data-toggle="tab"><i class="fa fa-list"></i> {:__('绑定微信')}</a></li>
                 </ul>
             </div>
             <div class="panel-body">
@@ -96,7 +98,10 @@
 
                         </div>
                     </div>
-
+                    <div class="tab-pane fade" id="two">
+                        <p>请扫描二维码绑定微信</p>
+                        <img id="adminCode" src="" alt="">
+                    </div>
                 </div>
             </div>
         </div>
