--- a/application/admin/view/sports/index/edit.html
+++ b/application/admin/view/sports/index/edit.html
@@ -8,9 +8,9 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-college" class="control-label col-xs-6 col-sm-2">{:__('学院')}:</label>
+        <label for="c-college" class="control-label col-xs-6 col-sm-2" >{:__('学院')}:</label>
         <div class="col-xs-6 col-sm-8" data-toggle="cxselect" data-selects="college" data-required="true">
-            <select id="c-college" class="college form-control" name="row[college]" data-value = "{$row.YXDM}" data-url="sports/index/getCollege" ></select>
+            <select id="c-college" class="college form-control"  name="row[college]"  data-value = "{$row.YXDM}" data-url="sports/index/getCollege" ></select>
         </div>
     </div>
     <div class="form-group">
@@ -21,6 +21,7 @@
     </div>
     <input id="old-detail_id" class="hidden"  value="{$row.detail_id}" name="row[detail_id]" type="text" >
     <input id="old-score" class="hidden"  value="{$row.score}" name="row[old_score]" type="text" >
+    <input id="old-college" class="hidden"  value="{$row.YXDM}" name="row[old_college]" type="text" >
     <div class="form-group">
         <label for="c-score" class="control-label col-xs-12 col-sm-2">{:__('得分')}:</label>
         <div class="col-xs-12 col-sm-8" data-selects="repaircontent" data-required="true">
