--- a/application/admin/view/sports/index/index.html
+++ b/application/admin/view/sports/index/index.html
@@ -8,7 +8,7 @@
                     <div id="toolbar" class="toolbar">
                         <a href="javascript:;" class="btn btn-primary btn-refresh" title="{:__('Refresh')}" ><i class="fa fa-refresh"></i> </a>
                         <a href="javascript:;" class="btn btn-success btn-add {:$auth->check('sports/index/add')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('Add')}</a>
-                        <a href="javascript:;" class="btn btn-info btn-add-multi {:$auth->check('sports/index/addmulity')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('多重添加')}</a>
+                        <a href="javascript:;" class="btn btn-info btn-add-multi {:$auth->check('sports/index/addmulti')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('多重添加')}</a>
                     </div>
                     <table id="table" class="table table-striped table-bordered table-hover" 
                            data-operate-edit="{:$auth->check('sports/index/edit')}" 
