录入成绩修改

--- a/application/admin/view/sports/index/add.html
+++ b/application/admin/view/sports/index/add.html
@@ -23,7 +23,7 @@
     <div class="form-group">
             <label for="c-score" class="control-label col-xs-12 col-sm-2">{:__('得分')}:</label>
         <div class="col-xs-12 col-sm-8" data-selects="repaircontent" data-required="true">
-            <input id="c-score" data-rule="required;integer" autocomplete="off" class="form-control" name="row[score]" type="text" autocomplete="off">
+            <input id="c-score" data-rule="required" autocomplete="off" class="form-control" name="row[score]" type="text" autocomplete="off">
         </div>
     </div>
     <div class="form-group">
