--- a/application/admin/view/sports/index/addmulti.html
+++ b/application/admin/view/sports/index/addmulti.html
@@ -30,7 +30,7 @@
             </div>
             <label for="c-score" class="control-label col-sm-1">{:__('得分')}:</label>
             <div class="col-sm-2" data-selects="repaircontent" data-required="true">
-                <input id="c-score-{$vo}" data-rule="integer" autocomplete="off" class="form-control" name="row[{$vo}][score]" type="text" autocomplete="off">
+                <input id="c-score-{$vo}" autocomplete="off" class="form-control" name="row[{$vo}][score]" type="text" autocomplete="off">
             </div>
             <label for="c-remark" class="control-label  col-sm-1">{:__('备注')}:</label>
             <div class="col-sm-2">
