--- a/application/admin/view/conversationrecord/index/edit.html
+++ b/application/admin/view/conversationrecord/index/edit.html
@@ -15,7 +15,7 @@
     <div class="form-group">
         <label for="c-tags" class="control-label col-xs-12 col-sm-2">{:__('学生评价')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-tags" data-rule="required" class="form-control selectpage" placeholder="请手动输入或选择标签" data-source="conversationrecord/tags/selectpage" data-primary-key="name" data-multiple="true" name="row[tags]" type="text" value="{$row.tags}">
+            <input id="c-tags" class="form-control selectpage" placeholder="请手动输入或选择标签" data-source="conversationrecord/tags/selectpage" data-primary-key="name" data-multiple="true" name="row[tags]" type="text" value="{$row.tags}">
         </div>
     </div>
     <div class="form-group ">
@@ -46,7 +46,7 @@
     <div class="form-group">
         <label for="c-CXKC" class="control-label col-xs-12 col-sm-2">{:__('欠学分课程')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-CXKC" data-rule="" class="form-control selectpage" placeholder="请手动输入或选择重修课程" data-source="conversationrecord/course/selectpage" data-primary-key="name" data-multiple="true" name="row[CXKC]" type="text" value="{$row.CXKC}">
+            <input id="c-CXKC" class="form-control selectpage" placeholder="请手动输入或选择重修课程" data-source="conversationrecord/course/selectpage" data-primary-key="name" data-multiple="true" name="row[CXKC]" type="text" value="{$row.CXKC}">
         </div>
     </div>
 
