重点关注学生1.1

--- a/application/admin/view/conversationrecord/content/edit.html
+++ b/application/admin/view/conversationrecord/content/edit.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('谈话内容')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea name="row[THNR]" data-rule="required" id="c-THNR" cols="20" rows="3" class="form-control" type="text">{$row.THNR}</textarea>
+            <textarea name="row[THNR]" data-rule="required" id="c-THNR" rows="15" class="form-control editor" type="text">{$row.THNR}</textarea>
         </div>
     </div>
     <div class="form-group ">
