--- a/application/admin/view/conversationrecord/index/edit.html
+++ b/application/admin/view/conversationrecord/index/edit.html
@@ -53,7 +53,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('总体评价')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-ZTPJ" data-rule="required" class="form-control " rows="5" name="row[ZTPJ]" cols="50">{$row.ZTPJ}</textarea>
+            <textarea id="c-ZTPJ" data-rule="required" class="form-control editor" rows="15" name="row[ZTPJ]" >{$row.ZTPJ}</textarea>
         </div>
     </div>
     <div class="form-group">
