--- a/application/admin/view/conversationrecord/content/add.html
+++ b/application/admin/view/conversationrecord/content/add.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('谈话内容')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea name="row[THNR]" id="c-THNR" cols="20" rows="3" class="form-control" type="text"></textarea>
+            <textarea name="row[THNR]" id="c-THNR" rows="15" class="form-control editor" type="text"></textarea>
         </div>
     </div>
     <div class="form-group hidden">
