--- a/application/admin/view/conversationrecord/count/index.html
+++ b/application/admin/view/conversationrecord/count/index.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box">
-        <span class="info-box-icon bg-aqua"><i class="fa fa-bed"></i></span>
+        <span class="info-box-icon bg-aqua"><i class="fa fa-comments-o"></i></span>
 
         <div class="info-box-content">
             <span class="info-box-text">累积谈话次数</span>
@@ -14,7 +14,7 @@
     <!-- /.col -->
     <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box">
-        <span class="info-box-icon bg-green"><i class="fa fa-group"></i></span>
+        <span class="info-box-icon bg-green"><i class="fa fa-users"></i></span>
 
         <div class="info-box-content">
             <span class="info-box-text">累计谈话学生</span>
@@ -27,7 +27,7 @@
     <!-- /.col -->
     <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box">
-        <span class="info-box-icon bg-yellow"><i class="fa fa-male"></i></span>
+        <span class="info-box-icon bg-yellow"><i class="fa fa-comment-o"></i></span>
 
         <div class="info-box-content">
             <span class="info-box-text">本月谈话次数</span>
@@ -40,7 +40,7 @@
     <!-- /.col -->
     <div class="col-md-3 col-sm-6 col-xs-12">
         <div class="info-box">
-        <span class="info-box-icon bg-red"><i class="fa fa-female"></i></span>
+        <span class="info-box-icon bg-red"><i class="fa fa-address-book"></i></span>
 
         <div class="info-box-content">
             <span class="info-box-text">本月谈话学生</span>
