--- a/application/admin/view/conversationrecord/index/add.html
+++ b/application/admin/view/conversationrecord/index/add.html
@@ -13,7 +13,12 @@
             <input id="c-tags"  class="form-control selectpage" placeholder="请手动输入或选择标签" data-source="conversationrecord/tags/selectpage" data-primary-key="name" data-multiple="true" name="row[tags]" type="text" >
         </div>
     </div>
-
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('学生宿舍')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-SSDM" data-rule="required;" class="form-control" name="row[SSDM]" type="text">
+        </div>
+    </div>
     <div class="form-group ">
         <label for="selectInsertTime" class="col-xs-2 control-label">建档时间</label>
         <div class="col-xs-8">
@@ -39,14 +44,24 @@
             <input id="c-CXKC" data-rule=""   class="form-control selectpage" placeholder="请手动输入或选择课程" data-source="conversationrecord/course/selectpage" data-primary-key="name" data-multiple="true" name="row[CXKC]" type="text" >
         </div>
     </div>
- 
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('家长联系方式')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-JZDH" data-rule="required;mobile" class="form-control" autocomplete="off" name="row[JZDH]" type="text">
+        </div>
+    </div>
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('总体评价')}:</label>
         <div class="col-xs-12 col-sm-8">
             <textarea name="row[ZTPJ]" id="c-ZTPJ" cols="20" rows="3" class="form-control" type="text"></textarea>
         </div>
+    </div> -->
+    <div class="form-group">
+        <label for="c-content" class="control-label col-xs-12 col-sm-2">{:__('总体评价')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <textarea id="c-ZTPJ" data-rule="required" class="form-control editor" name="row[ZTPJ]" rows="15" ></textarea>
+        </div>
     </div>
-
     <div class="form-group">
          <label class="control-label col-xs-12 col-sm-2">{:__('Gzlx')}:</label>
         <div class="col-xs-12 col-sm-8">
