--- a/application/admin/view/conversationrecord/index/edit.html
+++ b/application/admin/view/conversationrecord/index/edit.html
@@ -13,9 +13,15 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-tags" class="control-label col-xs-12 col-sm-2">{:__('学生评价')}:</label>
+        <label for="c-tags" class="control-label col-xs-12 col-sm-2">{:__('学生标签')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-tags" class="form-control selectpage" placeholder="请手动输入或选择标签" data-source="conversationrecord/tags/selectpage" data-primary-key="name" data-multiple="true" name="row[tags]" type="text" value="{$row.tags}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('学生宿舍')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-SSDM" data-rule="required;" class="form-control" name="row[SSDM]" value="{$row.SSDM}" type="text">
         </div>
     </div>
     <div class="form-group ">
@@ -49,7 +55,12 @@
             <input id="c-CXKC" class="form-control selectpage" placeholder="请手动输入或选择重修课程" data-source="conversationrecord/course/selectpage" data-primary-key="name" data-multiple="true" name="row[CXKC]" type="text" value="{$row.CXKC}">
         </div>
     </div>
-
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('家长联系方式')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-JZDH" data-rule="required;mobile" class="form-control" autocomplete="off" value="{$row.JZDH}" name="row[JZDH]" type="text">
+        </div>
+    </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('总体评价')}:</label>
         <div class="col-xs-12 col-sm-8">
