--- a/application/admin/view/conversationrecord/count/index.html
+++ b/application/admin/view/conversationrecord/count/index.html
@@ -52,7 +52,28 @@
     </div>
     <!-- /.col -->
 </div>
+<div class="col-md-12">
+    <!-- AREA CHART -->
+    <div class="box box-primary">
+        <div class="box-header with-border">
+            <h3 class="box-title">本月统计</h3>
 
+            <div class="box-tools pull-right">
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+        </div>
+        </div>
+        <div class="box-body">
+            <div class="chart">
+                <canvas id="areaChart" style="height: 250px; width: 467px;" height="375" width="700"></canvas>
+            </div>
+        </div>
+    <!-- /.box-body -->
+    </div>
+    <!-- /.box -->
+
+</div>
 <div class="panel panel-default panel-intro">
     {:build_heading()}
     
@@ -78,6 +99,4 @@
         </div>
     </div>
 </div>
-    
-    
     
