--- a/application/admin/view/conversationrecord/count/index.html
+++ b/application/admin/view/conversationrecord/count/index.html
@@ -56,7 +56,7 @@
     <!-- AREA CHART -->
     <div class="box box-primary">
         <div class="box-header with-border">
-            <h3 class="box-title">本月统计</h3>
+            <h3 class="box-title">年度统计</h3>
 
             <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -81,13 +81,13 @@
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active in" id="one">
                 <div class="widget-body no-padding">
-                    <!-- <div id="toolbar" class="toolbar">
+                    <div id="toolbar" class="toolbar">
                         <a href="javascript:;" class="btn btn-primary btn-refresh" title="{:__('Refresh')}" ><i class="fa fa-refresh"></i> </a>
-                        <a href="javascript:;" class="btn btn-success btn-add {:$auth->check('conversationrecord/course/add')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('Add')}</a>
+                        <!-- <a href="javascript:;" class="btn btn-success btn-add {:$auth->check('conversationrecord/course/add')?'':'hide'}" title="{:__('Add')}" ><i class="fa fa-plus"></i> {:__('Add')}</a>
                         <a href="javascript:;" class="btn btn-success btn-edit btn-disabled disabled {:$auth->check('conversationrecord/course/edit')?'':'hide'}" title="{:__('Edit')}" ><i class="fa fa-pencil"></i> {:__('Edit')}</a>
                         <a href="javascript:;" class="btn btn-danger btn-del btn-disabled disabled {:$auth->check('conversationrecord/course/del')?'':'hide'}" title="{:__('Delete')}" ><i class="fa fa-trash"></i> {:__('Delete')}</a>
-                        <a href="javascript:;" class="btn btn-danger btn-import {:$auth->check('conversationrecord/course/import')?'':'hide'}" title="{:__('Import')}" id="btn-import-file" data-url="ajax/upload" data-mimetype="csv,xls,xlsx" data-multiple="false"><i class="fa fa-upload"></i> {:__('Import')}</a>
-                    </div> -->
+                        <a href="javascript:;" class="btn btn-danger btn-import {:$auth->check('conversationrecord/course/import')?'':'hide'}" title="{:__('Import')}" id="btn-import-file" data-url="ajax/upload" data-mimetype="csv,xls,xlsx" data-multiple="false"><i class="fa fa-upload"></i> {:__('Import')}</a> -->
+                    </div>
                     <table id="table" class="table table-striped table-bordered table-hover" 
                             data-operate-edit="0" 
                             data-operate-del="0" 
